Fix navbar spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,12 @@
 p, li, #recipes, td {
     font-size: 18px;
 }
+
+
+#nav-mobile li {
+  padding-top: 20px;
+}
+
+.material-icons {
+  padding-left: 20px;
+}
